# AAGE

Practica1/: Práctica 1 (con gráficos).ipynb  README.md
Practica2/: README.md  requirements.txt
Practica2/Parte 1/: client_app.py  plots_results.py  pyproject.toml  server_app.py  task.py
Practica2/Parte 1/results/: results_fedavg(cnn).csv  results_fedavg(mlp)_le10_frac0.4.csv  results_fedprox(mlp).csv
Practica2/Parte 2/: river.ipynb
Practica2/Parte1/: client_app.py  plot_results.py  pyproject.toml  results_fedavg(cnn).csv  results_fedavg(mlp).csv  results_fedavg.csv  results_fedprox(cnn).csv  results_fedprox(mlp).csv  results_fedprox.csv  server_app.py  task.py
Practica2/Parte1/results/: results_fedavg(mlp).csv  results_fedprox(cnn).csv
Practica2/Parte2/: Entrega.ipynb
Práctica 1/: Practica1_final.py  Práctica 1 (con gráficos).ipynb  Práctica 1 (sin gráficos).ipynb  Práctica 1 1.ipynb  Práctica 1.ipynb  README.md  main.py
Práctica 2/: README.md
Práctica 2/Parte 1/: server_app.py
Práctica 2/Parte 1/results/: results_fedavg(cnn)_le10_frac1.0.csv  results_fedavg(mlp)_le10_frac0.1.csv  results_fedavg(mlp)_le10_frac1.0.csv  results_fedavg(mlp)_le1_frac1.0.csv  results_fedavg(mlp)_le5_frac1.0.csv  results_fedprox(cnn)_le10_frac1.0_mu0.01.csv  results_fedprox(mlp)_le10_frac1.0_mu0.01.csv  results_fedprox(mlp)_le10_frac1.0_mu0.1.csv
