[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmnist_flower"
version = "1.0.0"
license = "Apache-2.0"
description = "Federated learning on Fashion-MNIST with PyTorch and Flower"
dependencies = [
    "flwr[simulation]>=1.12.0",
    "numpy<2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "matplotlib>=3.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
model-type = "mlp"
num-server-rounds = 10
fraction-fit = 1.0
min-available-clients = 10
local-epochs = 3
batch-size = 64
strategy = "fedprox"
proximal-mu = 0.01  # solo se usa si strategy="fedprox"
learning-rate = 5.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10   # número de clientes (particiones)
